k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: photos.tty7.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: streamlit-service
                port:
                  number: 80
